# encodex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
encodex/: cli.py  graph.py  graph_state.py  node_runner.py
encodex/nodes/: __init__.py  content_analyzer.py  data_aggregator.py  input_processor.py  low_res_encoder.py  output_generator.py  placeholder_nodes.py  quality_metrics_calculator.py  recommendation_engine.py  segment_selector.py  test_encoding_generator.py  video_splitter.py
research/: convex-hull-research.md  encoding-optimization-spec.md  gemini-analysis.txt  research.md
scripts/: cleanup_gemini_files.py  convex_hull.py
tests/: test_example.py
