[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encodex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-core>=2.24.2",
    "google-genai>=1.9.0",
    "langgraph>=0.3.25",
    "pydantic>=2.11.2",
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
]

[project.scripts]
encodex = "encodex.cli:main"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default
lint.select = ["E", "F", "I"]
# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Python version compatibility
target-version = "py311"
# Line length matches black's default
line-length = 120

# Exclude files/directories from linting and formatting
# (Includes Ruff's defaults + .gitignore)
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".gitignore",  # Add .gitignore here
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "bumpversion>=0.6.0",
    "hatch>=1.14.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "tomli",
]
